--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 group   = org.open-dolphin.demo
-version = 0.8-SNAPSHOT
-dolphinVersion=0.8
+version = 1.0-SNAPSHOT
+dolphinVersion=1.0-SNAPSHOT
 nexusDeployURL=https://ci.canoo.com/nexus/content/repositories/snapshots
 nexusReleaseDelopyURL=https://ci.canoo.com/nexus/content/repositories/public-releases
 sonatypeDeployURL=https://oss.sonatype.org/content/repositories/snapshots
